# My-firts-FastAPI-app

./: README.md  alembic.ini  debug_routes.py  docker-compose.yml  dockerfile  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: c4061eb46831_add_users_table.py
api/v1/: router.py
api/v1/endpoints/: auth.py  notes.py
core/: config.py  dependencies.py
db/: session.py
models/: note.py  user.py
schemas/: note.py  user.py
services/: auth_service.py  note_service.py
tests/: conftest.py  test_auth.py  test_notes.py  test_notes_simple.py
