[project]
name = "my-firts-fastapi-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "fastapi[standard]>=0.135.3",
    "httpx>=0.28.1",
    "mypy>=1.20.1",
    "pydantic-settings>=2.14.0",
    "pytest>=9.0.3",
    "ruff>=0.15.11",
    "sqlalchemy>=2.0.49",
    "uvicorn[standard]>=0.44.0",
]
